--- a/test/performance/benchmarks/broker-pubsub/dev.config
+++ b/test/performance/benchmarks/broker-pubsub/dev.config
@@ -1,12 +1,12 @@
-### Creating this benchmark:
-# mako create_benchmark test/performance/broker-pubsub/continuous/dev.config
-### Updating this benchmark:
-# mako update_benchmark test/performance/broker-pubsub/continuous/dev.config
+# Create this benchmark with the mako tool: mako create_benchmark dev.config
+# Update this benchmark with the mako tool: mako update_benchmark dev.config
+# Learn more about the mako tool at
+# https://github.com/google/mako/blob/master/docs/CLI.md.
 
 project_name: "Knative"
 benchmark_name: "Development - PubSub Broker Latency & Throughput"
 description: "Measure latency and throughput of the broker using various channels."
-benchmark_key: '6592390798245888'
+benchmark_key: '5613587219349504'
 
 # Human owners for manual benchmark adjustments.
 owner_list: "grantrodgers@google.com"
@@ -58,6 +58,10 @@ metric_info_list: {
   label: "deliver-throughput"
 }
 metric_info_list: {
-  value_key: "ft"
-  label: "failure-throughput"
+  value_key: "pet"
+  label: "publish-failure-throughput"
+}
+metric_info_list: {
+  value_key: "det"
+  label: "deliver-failure-throughput"
 }
