--- a/test/performance/benchmarks/broker-pubsub/prod.config
+++ b/test/performance/benchmarks/broker-pubsub/prod.config
@@ -1,12 +1,12 @@
-# Create this benchmark with the mako tool: mako create_benchmark dev.config
-# Update this benchmark with the mako tool: mako update_benchmark dev.config
+# Create this benchmark with the mako tool: mako create_benchmark prod.config
+# Update this benchmark with the mako tool: mako update_benchmark prod.config
 # Learn more about the mako tool at
 # https://github.com/google/mako/blob/master/docs/CLI.md.
 
 project_name: "Knative"
-benchmark_name: "Development - PubSub Channel Latency & Throughput"
-description: "Measure latency and throughput of channels."
-benchmark_key: '6736782773190656'
+benchmark_name: "PubSub Broker Latency & Throughput"
+description: "Measure latency and throughput of the broker using various channels."
+benchmark_key: '6592390798245888'
 
 # Human owners for manual benchmark adjustments.
 owner_list: "grantrodgers@google.com"
@@ -18,11 +18,6 @@ owner_list: "cshou@google.com"
 
 # Anyone can add their IAM robot here to publish to this benchmark.
 owner_list: "mako-job@knative-performance.iam.gserviceaccount.com"
-# This is grantrodgers' robot:
-owner_list: "mako-upload@grantrodgers-crd.iam.gserviceaccount.com"
-owner_list: "mako-upload@xiyue-knative-project.iam.gserviceaccount.com"
-owner_list: "mako-upload@gracegao-knative-gcp-testing.iam.gserviceaccount.com"
-owner_list: "mako-upload@cshou-playground.iam.gserviceaccount.com"
 
 # Define the name and type for x-axis of run charts
 input_value_info: {
