--- a/config/300-pubsub.yaml
+++ b/config/300-pubsub.yaml
@@ -60,10 +60,10 @@ spec:
           properties:
             secret:
               type: object
-              description: "Credential to use to poll the Cloud Pub/Sub Subscription. It is not used to create or delete the Subscription, only to poll it. The value of the secret entry must be a service account key in the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys).  Defaults to secret.name of 'google-cloud-key' and secret.key of 'key.json'."
+              description: "Credential to use to poll the Cloud Pub/Sub Subscription. It is not used to create or delete the Subscription, only to poll it. The value of the secret entry must be a service account key in the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys). Defaults to secret.name of 'google-cloud-key' and secret.key of 'key.json'."
             project:
               type: string
-              description: "ID of the Google Cloud Project that the Pub/Sub Topic exists in. E.g. 'my-project-1234' rather than its display name, 'My Project' or its number '1234567890'."
+              description: "ID of the Google Cloud Project that the Pub/Sub Topic exists in. E.g. 'my-project-1234' rather than its display name, 'My Project' or its number '1234567890'. If omitted uses the Project ID from the GKE cluster metadata service."
             sink:
               type: object
               description: "Reference to an object that will resolve to a domain name to use as the sink."
@@ -91,17 +91,6 @@ spec:
                         name:
                           type: string
                           minLength: 1
-                - type: object
-                  properties:
-                    apiVersion:
-                      type: string
-                      minLength: 1
-                    kind:
-                      type: string
-                      minLength: 1
-                    name:
-                      type: string
-                      minLength: 1
             ceOverrides:
               type: object
               description: "Defines overrides to control modifications of the event sent to the sink."
