--- a/config/300-scheduler.yaml
+++ b/config/300-scheduler.yaml
@@ -101,17 +101,13 @@ spec:
                         name:
                           type: string
                           minLength: 1
-                - type: object
-                  properties:
-                    apiVersion:
-                      type: string
-                      minLength: 1
-                    kind:
-                      type: string
-                      minLength: 1
-                    name:
-                      type: string
-                      minLength: 1
+            ceOverrides:
+              type: object
+              description: "Defines overrides to control modifications of the event sent to the sink."
+              properties:
+                extensions:
+                  type: object
+                  description: "Extensions specify what attribute are added or overridden on the outbound event. Each `Extensions` key-value pair are set on the event as an attribute extension independently."
           required:
           - location
           - schedule
