--- a/config/300-pullsubscription.yaml
+++ b/config/300-pullsubscription.yaml
@@ -84,6 +84,9 @@ spec:
                         name:
                           type: string
                           minLength: 1
+            transformer:
+              type: object
+              description: "Reference to an object that will resolve to a domain name to use as the transformer."
             ceOverrides:
               type: object
               description: "Defines overrides to control modifications of the event sent to the sink."
@@ -136,6 +139,8 @@ spec:
                 type: object
               type: array
             sinkUri:
+              type: string
+            transformerUri:
               type: string
             projectId:
               type: string
