--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,7 +22,7 @@ required = [
 
 [[override]]
   name = "knative.dev/pkg"
-  branch = "master"
+  branch = "release-0.11"
 
 # This is a preemptive override.
 [[override]]
@@ -87,14 +87,6 @@ required = [
 [[constraint]]
   branch = "master"
   name = "golang.org/x/net"
-
-# Required for opencensus.
-# We're pinning this into a version (in the head of pkg) as there
-# seems to be some wonky issues by only specifying the version.
-[[override]]
-  name = "contrib.go.opencensus.io/exporter/stackdriver"
-  revision = "68e3d742b03c099c35428443886e65d9587c8d76"
-#  version = "v0.12.2"
 
 # Required for opencensus.
 [[override]]
