--- a/config/201-clusterrole.yaml
+++ b/config/201-clusterrole.yaml
@@ -62,6 +62,7 @@ rules:
 - apiGroups:
     - events.cloud.google.com
   resources:
+    - cloudauditlogs
     - storages
     - schedulers
     - pubsubs
@@ -70,6 +71,7 @@ rules:
 - apiGroups:
     - events.cloud.google.com
   resources:
+    - cloudauditlogs/status
     - storages/status
     - schedulers/status
     - pubsubs/status
