--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,7 +22,8 @@ required = [
 
 [[override]]
   name = "knative.dev/pkg"
-  branch = "release-0.11"
+  source = "github.com/nachocano/pkg"
+  branch = "other-test"
 
 # This is a preemptive override.
 [[override]]
