--- a/config/101-secret.yaml
+++ b/config/101-secret.yaml
@@ -14,6 +14,7 @@
 
 # This is a dummy secret, which will be mounted in the controller. It should be patched with credentials of a Service
 # Account that can manipulate the GCP resources users are interested in.
+# Data is set to REPLACE --> UkVQTEFDRQ==
 apiVersion: v1
 kind: Secret
 metadata:
