--- a/config/300-topic.yaml
+++ b/config/300-topic.yaml
@@ -40,9 +40,9 @@ spec:
     - name: Reason
       type: string
       JSONPath: ".status.conditions[?(@.type==\"Ready\")].reason"
-    - name: Hostname
+    - name: Address
       type: string
-      JSONPath: .status.address.hostname
+      JSONPath: .status.address.url
     - name: Age
       type: date
       JSONPath: .metadata.creationTimestamp
