--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,7 +22,7 @@ required = [
 
 [[override]]
   name = "knative.dev/pkg"
-  branch = "release-0.11"
+  branch = "master"
 
 # This is a preemptive override.
 [[override]]
