updating eventing, serving, pkg, and cloud events sdk to point release

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -63,9 +63,7 @@ required = [
 
 [[override]]
   name = "github.com/cloudevents/sdk-go"
-  # HEAD as of 2019-12-13. Needed the master for this fix: https://github.com/cloudevents/sdk-go/pull/272.
-  # Should be switched back to a release, once a new one is available.
-  branch = "master"
+  version = "0.10.2"
 
 [prune]
   go-tests = true
