--- a/test/e2e/config/auditlogs_test/auditlogs.yaml
+++ b/test/e2e/config/auditlogs_test/auditlogs.yaml
@@ -13,9 +13,9 @@
 # limitations under the License.
 
 apiVersion: events.cloud.google.com/v1alpha1
-kind: CloudAuditLog
+kind: AuditLogsSource
 metadata:
-  name: {{ .cloudauditlog }}
+  name: {{ .auditlogssource }}
   namespace: {{ .namespace }}
 spec:
   serviceName: {{ .serviceName }}
