--- a/config/300-auditlogssource.yaml
+++ b/config/300-auditlogssource.yaml
@@ -22,6 +22,7 @@ metadata:
   annotations:
     registry.cloud.google.com/eventTypes: |
       [
+        {"type", "com.google.cloud.auditlog.event", "schema", "type.googleapis.com/google.cloud.audit.AuditLog", "description", "Common audit log event type for all Google Cloud Platform API operations." }
       ]
   name: auditlogssources.events.cloud.google.com
 spec:
@@ -54,7 +55,7 @@ spec:
           properties:
             secret:
               type: object
-              description: "Credential to use for managing GCS notifications. Must be a service account key in JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys). If omitted, defaults to 'google-cloud-key'"
+              description: "Credential used to pull Stackdriver audit log pubsub messages. Must be a service account key in JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys). If omitted, defaults to 'google-cloud-key'"
             pubSubSecret:
               type: object
               description: "Optional credential to use for creating a Topic and subscribing to the Topic. If omitted, uses secret. Must be a service account key in JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys)."
@@ -78,6 +79,8 @@ spec:
               description: "Sink which receives the notifications."
           required:
           - sink
+          - serviceName
+          - methodName
         status:
           type: object
           properties:
