Set project in AuditLogsSource e2e tests.
This allows tests to succeed outside of GKE.

--- a/test/e2e/config/auditlogs_test/auditlogs.yaml
+++ b/test/e2e/config/auditlogs_test/auditlogs.yaml
@@ -21,6 +21,7 @@ spec:
   serviceName: {{ .serviceName }}
   methodName:  {{ .methodName }}
   resourceName:  {{ .resourceName }}
+  project: {{ .project }}
   sink:
     ref:
       apiVersion: v1
