Rename AuditLogsSource SinkID to StackdriverSink.

--- a/config/300-auditlogssource.yaml
+++ b/config/300-auditlogssource.yaml
@@ -115,7 +115,7 @@ spec:
               type: string
             topicId:
               type: string
-            sinkId:
+            stackdriverSink:
               type: string
             subscriptionId:
               type: string
