--- a/docs/auditlogssource/auditlogssource.yaml
+++ b/docs/auditlogssource/auditlogssource.yaml
@@ -9,7 +9,7 @@ spec:
     google.pubsub.v1.Publisher.CreateTopic
   sink:
     ref:
-      apiVersion: serving.knative.dev/v1
+      apiVersion: v1
       kind: Service
       name: event-display
 
