--- a/config/300-scheduler.yaml
+++ b/config/300-scheduler.yaml
@@ -23,7 +23,7 @@ metadata:
     # TODO properly define type, schema, and description.
     registry.knative.dev/eventTypes: |
       [
-        { "type": "com.google.cloud.pubsub.topic.publish", "description": "This event is sent when a message is published to a Cloud Pub/Sub topic."}
+        { "type": "com.google.cloud.sheduler.job.execute", "description": "This event is sent when a job is executed in Cloud Scheduler."}
       ]
   name: schedulers.events.cloud.google.com
 spec:
