--- a/config/300-auditlogssource.yaml
+++ b/config/300-auditlogssource.yaml
@@ -16,7 +16,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   labels:
-    eventing.knative.dev/source: "true"
+    duck.knative.dev/source: "true"
     events.cloud.google.com/release: devel
     events.cloud.google.com/crd-install: "true"
   annotations:
@@ -33,6 +33,7 @@ spec:
     - all
     - knative
     - auditlogssource
+    - sources
     kind: AuditLogsSource
     plural: auditlogssources
   scope: Namespaced
