--- a/config/300-cloudschedulersource.yaml
+++ b/config/300-cloudschedulersource.yaml
@@ -20,11 +20,12 @@ metadata:
     events.cloud.google.com/release: devel
     events.cloud.google.com/crd-install: "true"
   annotations:
+    # TODO properly define type, schema, and description.
     registry.knative.dev/eventTypes: |
       [
-        { "type": "com.google.cloud.pubsub.topic.publish", "description": "This event is sent when a message is published to a Cloud Pub/Sub topic."}
+        { "type": "com.google.cloud.sheduler.job.execute", "description": "This event is sent when a job is executed in Cloud Scheduler."}
       ]
-  name: pubsubs.events.cloud.google.com
+  name: cloudschedulersources.events.cloud.google.com
 spec:
   group: events.cloud.google.com
   version: v1alpha1
@@ -32,10 +33,10 @@ spec:
     categories:
     - all
     - knative
-    - pubsub
+    - cloudschedulersource
     - sources
-    kind: PubSub
-    plural: pubsubs
+    kind: CloudSchedulerSource
+    plural: cloudschedulersources
   scope: Namespaced
   subresources:
     status: {}
@@ -53,19 +54,28 @@ spec:
     openAPIV3Schema:
       properties:
         spec:
-          required:
-            - sink
-            - topic
           properties:
             secret:
               type: object
-              description: "Credential to use to poll the Cloud Pub/Sub Subscription. It is not used to create or delete the Subscription, only to poll it. The value of the secret entry must be a service account key in the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys). Defaults to secret.name of 'google-cloud-key' and secret.key of 'key.json'."
+              description: "Credential to use for managing Scheduler Jobs. Must be a service account key in JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys). If omitted, defaults to 'google-cloud-key'."
+            pubSubSecret:
+              type: object
+              description: "Optional credential to use for creating a Topic and subscribing to the Topic. If omitted, uses secret. Must be a service account key in JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys)."
             project:
               type: string
-              description: "ID of the Google Cloud Project that the Pub/Sub Topic exists in. E.g. 'my-project-1234' rather than its display name, 'My Project' or its number '1234567890'. If omitted uses the Project ID from the GKE cluster metadata service."
+              description: "Google Cloud Project ID of the project into which the Scheduler job should be created. If omitted uses the Project ID from the GKE cluster metadata service."
+            location:
+              type: string
+              description: "Location to create the Scheduler job in."
+            schedule:
+              type: string
+              description: "Frequency using the unix-cron format. Or App Engine Cron format."
+            data:
+              type: string
+              description: "Data to send in the payload of the Event."
             sink:
               type: object
-              description: "Reference to an object that will resolve to a domain name to use as the sink."
+              description: "Sink which receives the notifications."
               anyOf:
                 - type: object
                   properties:
@@ -97,24 +107,13 @@ spec:
                 extensions:
                   type: object
                   description: "Extensions specify what attribute are added or overridden on the outbound event. Each `Extensions` key-value pair are set on the event as an attribute extension independently."
-            topic:
-              type: string
-              description: "ID of the Cloud Pub/Sub Topic to Subscribe to. It must be in the form of the unique identifier within the project, not the entire name. E.g. it must be 'laconia', not 'projects/my-gcp-project/topics/laconia'."
-            ackDeadline:
-              type: string
-              description:  "The default maximum time after a subscriber receives a message before the subscriber should acknowledge the message. Defaults to `30s`. Valid time units are `s`, `m`, `h`. The minimum deadline you can specify is 0 seconds. The maximum deadline you can specify is 600 seconds (10 minutes)."
-            retainAckedMessages:
-              type: boolean
-              description: "Whether to retain acknowledged messages. If true, acknowledged messages will not be expunged until they fall out of the RetentionDuration window."
-            retentionDuration:
-              type: string
-              description: "How long to retain messages in backlog, from the time of publish. If retainAckedMessages is true, this duration affects the retention of acknowledged messages, otherwise only unacknowledged messages are retained. Defaults to 7 days (`168h`). Cannot be longer than 7 days or shorter than 10 minutes. Valid time units are `s`, `m`, `h`."
-          type: object
+          required:
+          - location
+          - schedule
+          - sink
+          - data
         status:
           properties:
-            observedGeneration:
-              type: integer
-              format: int64
             conditions:
               items:
                 properties:
@@ -138,5 +137,13 @@ spec:
                 type: object
               type: array
             sinkUri:
+              type: string
+            projectId:
+              type: string
+            topicId:
+              type: string
+            notificationId:
+              type: string
+            subscriptionId:
               type: string
           type: object
