--- a/docs/cloudauditlogssource/cloudauditlogssource.yaml
+++ b/docs/cloudauditlogssource/cloudauditlogssource.yaml
@@ -1,7 +1,7 @@
 apiVersion: events.cloud.google.com/v1alpha1
-kind: AuditLogsSource
+kind: CloudAuditLogsSource
 metadata:
-  name: auditlogssource-test
+  name: cloudauditlogssource-test
 spec:
   serviceName: pubsub.googleapis.com
   methodName: google.pubsub.v1.Publisher.CreateTopic
