--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -33,7 +33,7 @@ required = [
 # This is a preemptive override.
 [[override]]
   name = "knative.dev/eventing"
-  branch = "release-0.12"
+  branch = "master"
 
 # This is a preemptive override.
 [[override]]
