--- a/config/300-cloudauditlogssource.yaml
+++ b/config/300-cloudauditlogssource.yaml
@@ -20,7 +20,7 @@ metadata:
     events.cloud.google.com/release: devel
     events.cloud.google.com/crd-install: "true"
   annotations:
-    registry.cloud.google.com/eventTypes: |
+    registry.knative.dev/eventTypes: |
       [
         {"type", "com.google.cloud.auditlog.event", "schema", "type.googleapis.com/google.logging.v2.LogEntry", "description", "Common audit log event type for all Google Cloud Platform API operations." }
       ]
