--- a/config/300-cloudauditlogssource.yaml
+++ b/config/300-cloudauditlogssource.yaml
@@ -22,7 +22,7 @@ metadata:
   annotations:
     registry.knative.dev/eventTypes: |
       [
-        {"type", "com.google.cloud.auditlog.event", "schema", "type.googleapis.com/google.logging.v2.LogEntry", "description", "Common audit log event type for all Google Cloud Platform API operations." }
+        {"type": "com.google.cloud.auditlog.event", "schema": "type.googleapis.com/google.logging.v2.LogEntry", "description": "Common audit log event type for all Google Cloud Platform API operations." }
       ]
   name: cloudauditlogssources.events.cloud.google.com
 spec:
