--- a/test/performance/benchmarks/broker-pubsub/dev.config
+++ b/test/performance/benchmarks/broker-pubsub/dev.config
@@ -15,6 +15,7 @@ owner_list: "xiyue@google.com"
 owner_list: "gracegao@google.com"
 owner_list: "nachocano@google.com"
 owner_list: "cshou@google.com"
+owner_list: "ngiraldo@google.com"
 
 # Anyone can add their IAM robot here to publish to this benchmark.
 owner_list: "mako-job@knative-performance.iam.gserviceaccount.com"
@@ -24,6 +25,7 @@ owner_list: "mako-upload@xiyue-knative-project.iam.gserviceaccount.com"
 owner_list: "mako-upload@gracegao-knative-gcp-testing.iam.gserviceaccount.com"
 owner_list: "mako-upload@knative-project-228222.iam.gserviceaccount.com"
 owner_list: "mako-upload@cshou-playground.iam.gserviceaccount.com"
+owner_list: "mako-upload@ngiraldo-knative-dev.iam.gserviceaccount.com"
 
 # Define the name and type for x-axis of run charts
 input_value_info: {
