--- a/test/performance/benchmarks/channel-pubsub/prod.config
+++ b/test/performance/benchmarks/channel-pubsub/prod.config
@@ -15,6 +15,7 @@ owner_list: "xiyue@google.com"
 owner_list: "gracegao@google.com"
 owner_list: "nachocano@google.com"
 owner_list: "cshou@google.com"
+owner_list: "ngiraldo@google.com"
 
 # Anyone can add their IAM robot here to publish to this benchmark.
 owner_list: "mako-job@knative-performance.iam.gserviceaccount.com"
