--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -28,7 +28,7 @@ required = [
 # Our master branch tracks knative/pkg master or a release.
 [[override]]
   name = "knative.dev/pkg"
-  branch = "master"
+  branch = "release-0.13"
 
 # This is a preemptive override.
 [[override]]
