adding config leader election

--- a/config/500-controller.yaml
+++ b/config/500-controller.yaml
@@ -51,6 +51,8 @@ spec:
           value: config-logging
         - name: CONFIG_OBSERVABILITY_NAME
           value: config-observability
+        - name: CONFIG_LEADERELECTION_NAME
+          value: config-leader-election
         - name: METRICS_DOMAIN
           value: cloud.google.com/events
         volumeMounts:
