--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -33,12 +33,12 @@ required = [
 # This is a preemptive override.
 [[override]]
   name = "knative.dev/eventing"
-  branch = "master"
+  branch = "release-0.13"
 
 # This is a preemptive override.
 [[override]]
   name = "knative.dev/serving"
-  branch = "master"
+  branch = "release-0.13"
 
 [[override]]
   name = "go.uber.org/zap"
