--- a/config/core/deployments/webhook.yaml
+++ b/config/core/deployments/webhook.yaml
@@ -38,7 +38,7 @@ spec:
           terminationMessagePolicy: FallbackToLogsOnError
           # This is the Go import path for the binary that is containerized
           # and substituted here.
-          image: github.com/google/knative-gcp/cmd/webhook
+          image: ko://github.com/google/knative-gcp/cmd/webhook
           resources:
             requests:
               # taken from serving.
