--- a/test/test_images/receiver/pod.yaml
+++ b/test/test_images/receiver/pod.yaml
@@ -5,5 +5,5 @@ metadata:
 spec:
   containers:
     - name: receiver
-      image: github.com/google/knative-gcp/test/test_images/receiver
+      image: ko://github.com/google/knative-gcp/test/test_images/receiver
 
