--- a/config/core/deployments/controller-non-gke.yaml
+++ b/config/core/deployments/controller-non-gke.yaml
@@ -34,15 +34,15 @@ spec:
       serviceAccountName: controller
       containers:
       - name: controller
-        image: github.com/google/knative-gcp/cmd/controller
+        image: ko://github.com/google/knative-gcp/cmd/controller
         imagePullPolicy: Always
         env:
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: /var/secrets/google/key.json
         - name: PUBSUB_RA_IMAGE
-          value: github.com/google/knative-gcp/cmd/pubsub/receive_adapter
+          value: ko://github.com/google/knative-gcp/cmd/pubsub/receive_adapter
         - name: PUBSUB_PUBLISHER_IMAGE
-          value: github.com/google/knative-gcp/cmd/pubsub/publisher
+          value: ko://github.com/google/knative-gcp/cmd/pubsub/publisher
         - name: SYSTEM_NAMESPACE
           valueFrom:
             fieldRef:
