--- a/test/test_images/scheduler_target/pod.yaml
+++ b/test/test_images/scheduler_target/pod.yaml
@@ -5,5 +5,5 @@ metadata:
 spec:
   containers:
     - name: scheduler_target
-      image: github.com/google/knative-gcp/test/test_images/scheduler_target
+      image: ko://github.com/google/knative-gcp/test/test_images/scheduler_target
 
