--- a/config/core/resources/topic.yaml
+++ b/config/core/resources/topic.yaml
@@ -55,7 +55,7 @@ spec:
           properties:
             serviceAccount:
               type: string
-              description: "GCP service account used as credential to poll the Cloud Pub/Sub Subscription. The value of it must be a full format of gcp service account."
+              description: "GCP service account used to poll the Cloud Pub/Sub Subscription. The value of the service account must be a valid Google service account (see https://cloud.google.com/iam/docs/service-accounts)."
             secret:
               type: object
               description: "Credential to use to manage Cloud Pub/Sub. The value of the secret entry must be a service account key in the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys). If omitted, defaults to 'google-cloud-key'."
