--- a/docs/examples/cloudstoragesource/cloudstoragesource.yaml
+++ b/docs/examples/cloudstoragesource/cloudstoragesource.yaml
@@ -30,7 +30,9 @@ spec:
 
   # If running in GKE, we will ask the metadata server, change this if required.
   #project: MY_PROJECT
-  # The default secret name and key, change this if required.
+  #  # If running with workload identity enabled, update serviceAccount.
+  #  serviceAccount: service-account-id@project-id.iam.gserviceaccount.com
+  #  # If running with secret, here is the default secret name and key, change this if required.
   #secret:
   #  name: google-cloud-key
   #  key: key.json
