--- a/config/core/resources/channel.yaml
+++ b/config/core/resources/channel.yaml
@@ -56,6 +56,9 @@ spec:
       properties:
         spec:
           properties:
+            serviceAccount:
+              type: string
+              description: "GCP service account used to poll the Cloud Pub/Sub Subscription. The value of the service account must be a valid Google service account (see https://cloud.google.com/iam/docs/service-accounts)."
             secret:
               type: object
               description: "Credential to use to manage Cloud Pub/Sub. The value of the secret entry must be a service account key in the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys). Defaults to secret.name of 'google-cloud-key' and secret.key of 'key.json'."
