--- a/docs/examples/cloudauditlogssource/cloudauditlogssource.yaml
+++ b/docs/examples/cloudauditlogssource/cloudauditlogssource.yaml
@@ -11,14 +11,11 @@ spec:
       kind: Service
       name: event-display
 
-  # If running in GKE, we will ask the metadata server, change this if required.
-  #project: MY_PROJECT
-  #  # If running with workload identity enabled, update serviceAccount.
-  #  serviceAccount: service-account-id@project-id.iam.gserviceaccount.com
-  #  # If running with secret, here is the default secret name and key, change this if required.
-  #secret:
-  #  name: google-cloud-key
-  #  key: key.json
-  #pubsubSecret:  # A secret in the default namespace for Pub/Sub operations
-  #name: google-cloud-key
-  #key: key.json
+#    # If running in GKE, we will ask the metadata server, change this if required.
+#  project: MY_PROJECT
+#    # If running with workload identity enabled, update serviceAccount.
+#  serviceAccount: service-account-id@project-id.iam.gserviceaccount.com
+#    # If running with secret, here is the default secret name and key, change this if required.
+#  secret:
+#    name: google-cloud-key
+#    key: key.json
