--- a/docs/examples/cloudstoragesource/cloudstoragesource.yaml
+++ b/docs/examples/cloudstoragesource/cloudstoragesource.yaml
@@ -28,19 +28,14 @@ spec:
       kind: Service
       name: event-display
 
-  # If running in GKE, we will ask the metadata server, change this if required.
-  #project: MY_PROJECT
-  #  # If running with workload identity enabled, update serviceAccount.
-  #  serviceAccount: service-account-id@project-id.iam.gserviceaccount.com
-  #  # If running with secret, here is the default secret name and key, change this if required.
-  #secret:
-  #  name: google-cloud-key
-  #  key: key.json
-  # The default secret name and key for managing Pub/Sub resources,
-  # change this if required.
-  #pubSubSecret:
-  #  name: google-cloud-key
-  #  key: key.json
+#    # If running in GKE, we will ask the metadata server, change this if required.
+#  project: MY_PROJECT
+#    # If running with workload identity enabled, update serviceAccount.
+#  serviceAccount: service-account-id@project-id.iam.gserviceaccount.com
+#    # If running with secret, here is the default secret name and key, change this if required.
+#  secret:
+#    name: google-cloud-key
+#    key: key.json
 
 ---
 
